# base-numeric

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  manifest.xml
.ci/: manifest
src/: CMakeLists.txt  Circle.cpp  Circle.hpp  Combinatorics.cpp  Combinatorics.hpp  DiscreteFilter.cpp  DiscreteFilter.hpp  FitPolynom.hpp  Histogram.hpp  IntegerPartitioning.cpp  IntegerPartitioning.hpp  LimitedCombination.hpp  Main.cpp  MatchTemplate.hpp  PlaneFitting.hpp  SavitzkyGolayFilter.cpp  SavitzkyGolayFilter.hpp  Stats.hpp  Twiddle.cpp  Twiddle.hpp  histogram.hpp  stats.hpp
src/backwards/: Histogram.hpp  PlaneFitting.hpp  Stats.hpp
test/: CMakeLists.txt  numeric.cpp  suite.cpp  test.cpp  test_Combinatorics.cpp  test_FitPolynom.cpp  test_IntegerPartitioning.cpp  test_LimitedCombination.cpp  test_SavitzkyGolayFilter.cpp  test_circle.cpp  test_filter.cpp  test_polyfit.cpp
